Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-634

C# Compiler Generates Incorrect Code For Fields which begin with an uppercase letter

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.5
    • C# - Compiler
    • None
    • Patch Available

    Description

      the code generator for C# generates properties which have the name of the field with the first letter uppercased. So field 'foo' would become property 'Foo' with 'foo' as its backing field.

      Since the isset is being managed in the property setter, I just added a "_" to the backing field, and changed all the field references to refer to the property instead.

      Attachments

        1. csharp_property_issues.patch
          7 kB
          Jon S Akhtar

        Issue Links

          Activity

            People

              akhtar Jon S Akhtar
              akhtar Jon S Akhtar
              Votes:
              3 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: