THRIFT-634. csharp: C# Compiler Generates Incorrect Code For Fields which begin with an uppercase letter

Added a '_' to the backing field, and changed all the field references to refer to the property instead.

Patch: Jon S Akhtar

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@991960 13f79535-47bb-0310-9956-ffa450edef68